--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ aside{
 
 /* For javascript file */
 .popup .show {
-  visibility: visible;
+  visibility: hidden;
   -webkit-animation: fadeIn 1s;
   animation: fadeIn 1s
 }
