--- a/style.css
+++ b/style.css
@@ -5,8 +5,8 @@
 
 /* Type */
 @font-face{
-  font-family: 'Narrow';
-  src: url(https://cdn.glitch.global/2e794bb1-3d79-4f7f-b685-47005b753467/arialnarrow.ttf?v=1745366157991)
+  font-family: 'Regular';
+  src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-VariableFont_wght.ttf)
 }
 
 body{
