--- a/style.css
+++ b/style.css
@@ -7,8 +7,7 @@
 @font-face{
   font-family: 'Regular';
   src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-VariableFont_wght.ttf)
-  .montserrat-<uniquifier>
-  src: url()
+  src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-Italic-VariableFont_wght.ttf)
 }
 
 body{
