--- a/style.css
+++ b/style.css
@@ -6,7 +6,7 @@
 /* Type */
 @font-face{
   font-family: 'Regular';
-  src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-VariableFont_wght.ttf)
+  src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-VariableFont_wght.ttf);
   src: url(https://github.com/maleug/maliaeugenio/blob/main/fonts/Montserrat-Italic-VariableFont_wght.ttf)
 }
 
